--- a/inventory-dashboard/index.html
+++ b/inventory-dashboard/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="./src/images/top_logo.png"  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>inventory-dashboard</title>
+    <title>Mai Shan Yun</title>
   </head>
   <body>
     <div id="root"></div>
